--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-body {
+/* body {
     display: flex;
     background: black;
 }
 
 main {
-    margin: 20vh auto;;
-}
+    margin: 20vh auto;
+} */
